--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,13 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 *,
 *::after,
 *::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 html,
 body,
 #root {
-  height: 100%;
+  min-height: 100vh;
+}
+
+#root {
+  background-color: #3333;
 }
