--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -1,11 +1,12 @@
 .shopping-bag {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   height: 100%;
   width: 33%;
   padding: 1rem;
   row-gap: 2rem;
-  margin: 0 auto;
+  margin: 0 0 0 auto;
 }
 
 .close-btn {
@@ -14,20 +15,23 @@
   border: none;
   outline: none;
   background: none;
-  font-size: 1.25rem;
+  font-size: 2rem;
 }
 
 a.checkout {
   font-size: 1.25rem;
-  align-self: center;
-  width: 80%;
+  width: 100%;
   height: 4rem;
 }
 
 button.checkout {
   font-size: 1.25rem;
-  align-self: center;
   width: 100%;
   cursor: pointer;
   height: 100%;
+}
+
+.total-price {
+  font-weight: bold;
+  font-size: 1.25rem;
 }
