--- a/src/styles/CartItem.css
+++ b/src/styles/CartItem.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: flex-start;
   column-gap: 1rem;
+  width: 100%;
 }
 
 .cart-item > img {
@@ -18,6 +19,8 @@
 .info-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   height: 100%;
   row-gap: 1.2rem;
   width: 50%;
@@ -63,6 +66,6 @@
   border: none;
   outline: none;
   background: none;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   width: 33%;
 }
